# flickr2meilisearch

./: Cargo.toml
src/: main.rs
