[package]
name = "flickr2meilisearch"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
backoff = { version = "0.4.0", features = ["tokio"] }
indicatif = "0.18.2"
reqwest = { version = "0.12.24", features = ["json"] }
rusty-s3 = "0.8.1"
tokio = { version = "1.48.0", features = ["full"] }
