[package]
name = "flickr2meilisearch"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
backoff = { version = "0.4.0", features = ["tokio"] }
base64 = "0.22.1"
bytes = "1.10.1"
clap = { version = "4.5.51", features = ["derive"] }
image = "0.25.8"
indicatif = "0.18.2"
meilisearch-sdk = "0.30.0"
path-slash = "0.2.1"
rayon = "1.11.0"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls", "charset", "http2", "system-proxy"] }
rusty-s3 = "0.8.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tracing = { version = "0.1.41", default-features = false }
tracing-subscriber = "0.3.20"
